--- a/src/main/webapp/pages/PaymentHistory/PaymentHistory.html
+++ b/src/main/webapp/pages/PaymentHistory/PaymentHistory.html
@@ -66,9 +66,7 @@
                     <wm-gridcolumn columnwidth="4" name="gridcolumn15_2">
                         <wm-label padding="unset 0.5em unset 1em" name="label7_3" caption="bind:'<h4>Payment Number</h4><p>' + Widgets.gridTransactions.selecteditem.paymentNumber + '</p>'"></wm-label>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="8" name="gridcolumn16_5">
-                        <wm-button class="btn-primary" caption="Download PDF Receipt" type="button" margin="unset unset unset 0.5em" name="btnDownloadPdfReceipt" iconclass="wi wi-equalizer" on-click="Variables.svCreateReceiptPdf.invoke()"></wm-button>
-                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="8" name="gridcolumn16_5"></wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow5">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn11" padding="1em unset">
@@ -80,7 +78,6 @@
                             <wm-grid-column binding="formDesign" caption="Form" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                             <wm-grid-column binding="municipalityName" caption="Municipality" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                             <wm-grid-column binding="fullAddress" caption="Address" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                            <wm-grid-column binding="comments" caption="Fee Comments" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                         </wm-grid>
                     </wm-gridcolumn>
                 </wm-gridrow>
@@ -94,6 +91,7 @@
                 </wm-gridrow>
             </wm-layoutgrid>
             <wm-dialogactions name="dialogactions1">
+                <wm-button class="btn-primary" caption="Download Receipt PDF" type="button" margin="unset 0.5em" name="btnDownloadPdfReceipt" iconclass="wi wi-file-download" on-click="Variables.svCreateReceiptPdf.invoke()"></wm-button>
                 <wm-button class="btn-secondary" caption="Close" on-click="closeDialog()" name="button1" iconclass="wi wi-cancel"></wm-button>
             </wm-dialogactions>
         </wm-dialog>
