--- a/src/main/webapp/pages/ManageMunicipalityVendors/ManageMunicipalityVendors.html
+++ b/src/main/webapp/pages/ManageMunicipalityVendors/ManageMunicipalityVendors.html
@@ -185,7 +185,7 @@
                         <wm-composite name="composite4">
                             <wm-label class="col-md-3 form-control-static" caption="Review Status" horizontalalign="left" name="label9" fontweight="bold"></wm-label>
                             <wm-container class="col-md-9" name="container4" width="169px">
-                                <wm-select dataset="Pending,Approved,Suspended" datavalue="Approved" name="selectFromApproved"></wm-select>
+                                <wm-select dataset="Approved,Suspended" datavalue="Approved" name="selectFromApproved"></wm-select>
                             </wm-container>
                         </wm-composite>
                     </wm-gridcolumn>
@@ -215,7 +215,7 @@
                         <wm-composite name="composite7">
                             <wm-label class="col-md-3 form-control-static" caption="Review Status" horizontalalign="left" name="label11" fontweight="bold"></wm-label>
                             <wm-container class="col-md-9" name="container6" width="169px">
-                                <wm-select dataset="Pending,Approved,Suspended" datavalue="Suspended" name="selectFromSuspended"></wm-select>
+                                <wm-select dataset="Approved,Suspended" datavalue="Suspended" name="selectFromSuspended"></wm-select>
                             </wm-container>
                         </wm-composite>
                     </wm-gridcolumn>
