updated the help text on the "Letters" tab of both Files modified - [_viewForm,_viewInspection]

--- a/src/main/webapp/pages/_viewInspection/_viewInspection.html
+++ b/src/main/webapp/pages/_viewInspection/_viewInspection.html
@@ -290,9 +290,9 @@
                                     <wm-layoutgrid name="layoutgrid32">
                                         <wm-gridrow name="gridrow109">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn199_1">
-                                                <wm-label padding="unset 0.5em" name="label137" caption="The letter templates below have been associated with this inspection design."></wm-label>
-                                                <wm-label padding="unset 0.5em" name="label138" caption="Letters can be set on this inspection's &quot;Edit Inspection&quot; page to be automatically generated, emailed, and attached to the inspection when the inspection enters a specified outcome."></wm-label>
-                                                <wm-label padding="unset 0.5em" name="label139" caption="To &quot;manually&quot; generate one of the letters below, which will display the inspection content as it stands at this moment, use the &quot;Generate Letter&quot; button."></wm-label>
+                                                <wm-label padding="unset 0.5em" name="label137" caption="The letter templates below have been associated with this inspection design by the Municipality Administrator on the &quot;Edit Inspection&quot; page."></wm-label>
+                                                <wm-label padding="unset 0.5em" name="label138" caption="Letters can generated automatically when the inspection is moved into an outcome, or they can be generated here manually on demand."></wm-label>
+                                                <wm-label padding="unset 0.5em" name="label139" caption="Use the &quot;Download Letter&quot; action below to manually generate a letter that will display the inspection content as it stands currently. You may also use the &quot;Send Letter&quot; icon to email yourself the manually-generated letter."></wm-label>
                                                 <wm-label padding="unset 0.5em" name="label105" caption="This tab is only visible to municipality employees."></wm-label>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
