updated spinner text Files modified - [MyCart]

--- a/src/main/webapp/pages/MyCart/MyCart.html
+++ b/src/main/webapp/pages/MyCart/MyCart.html
@@ -36,7 +36,7 @@
                                 </wm-layoutgrid>
                             </wm-wizardstep>
                             <wm-wizardstep name="wizardstep2" title="Checkout" iconclass="wi wi-attach-money" on-load="wizardstep2Load($scope, stepIndex)" on-prev="wizardstep2Prev($scope, currentStep, stepIndex)">
-                                <wm-spinner id="spinner1" name="spinner1" caption="Processing payment"></wm-spinner>
+                                <wm-spinner id="spinner1" name="spinner1" caption="Processing Payment..."></wm-spinner>
                                 <wm-layoutgrid name="layoutgrid2">
                                     <wm-gridrow name="gridrow4" padding="1em unset 4em unset">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn4">
