--- a/src/main/webapp/pages/MunicipalityCodeList/MunicipalityCodeList.html
+++ b/src/main/webapp/pages/MunicipalityCodeList/MunicipalityCodeList.html
@@ -31,7 +31,7 @@
                                     <wm-checkbox scopedatavalue="row['activeYn']" disabled="{{colDef.readonly || !isGridEditMode}}" class="" data-ng-class=""></wm-checkbox>
                                 </wm-grid-column>
                                 <wm-grid-action key="addNewRow" display-name="New Code" show="true" class="btn-primary" iconclass="wi wi-plus" title="New Code" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
-                                <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="editRow()" disabled="false"></wm-grid-row-action>
+                                <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="editRow();updaterowAction($event)" disabled="false"></wm-grid-row-action>
                                 <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
                             </wm-grid>
                             <wm-liveform novalidate="false" errormessage="" title="Code Details" formlayout="dialog" iconclass="wi wi-playlist-add" dataset="bind:Variables.lvCodeListData.dataSet" captionalign="left" captionposition="top" name="liveformCodeList">
