--- a/src/main/webapp/pages/CXCodeSets/CXCodeSets.html
+++ b/src/main/webapp/pages/CXCodeSets/CXCodeSets.html
@@ -12,13 +12,13 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow7">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn7" padding="unset unset 1em unset">
-                        <wm-label name="labelHeader" caption="Global Code Sets" fontweight="bold" class="h4"></wm-label>
+                        <wm-label name="labelHeader" caption="Global Code Sets" fontweight="bold" class="h4" padding="unset 0.5em"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow8">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn8">
-                        <wm-label padding="unset 0.5em" name="label3" caption="Code Sets are assigned individually to inspection designs where the &quot;Track Violations&quot; setting is enabled, and allow inspectors to cite violations of specific codes on an inspection."></wm-label>
-                        <wm-label padding="unset 0.5em" name="label2" caption="The following code sets can be cited as violations on inspections by any municipality."></wm-label>
+                        <wm-label padding="unset 0.5em" name="label3" caption="Code Sets are assigned to individual inspection designs that have the &quot;Enable Violations&quot; setting selected, and allow inspectors to cite violations of specific codes on an inspection."></wm-label>
+                        <wm-label padding="unset 0.5em" name="label2" caption="The following code sets can be cited as violations on inspections by any municipality in CivicXpress."></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow1">
