--- a/src/main/webapp/pages/MunicipalityCodeList/MunicipalityCodeList.html
+++ b/src/main/webapp/pages/MunicipalityCodeList/MunicipalityCodeList.html
@@ -12,66 +12,79 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow8_1">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn8_1" padding="unset unset 1em unset">
-                        <wm-label name="labelHeader" class="h4" fontweight="bold" caption="bind:Variables.lvCurrentCodeSetObj.dataSet.data[$i].municipalities.municipalityName + ' Code List: ' + Variables.lvCurrentCodeSetObj.dataSet.data[$i].codeSetTitle"></wm-label>
-                    </wm-gridcolumn>
-                </wm-gridrow>
-                <wm-gridrow name="gridrow9">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn9">
-                        <wm-label padding="unset 0.5em" name="label2" caption="Displayed below is a list of all individual codes contained within the selected Code Set."></wm-label>
+                        <wm-label name="labelHeader" class="h4" fontweight="bold" caption="bind:Variables.lvCurrentCodeSetObj.dataSet.data[$i].municipalities.municipalityName + ' Code List'"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow2">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn3">
-                        <wm-livegrid formlayout="dialog" name="livegridCodeList">
-                            <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.lvCodeListData.dataSet" navigation="Classic" name="gridCodeList" filtermode="multicolumn" exportformat="EXCEL" showrecordcount="true">
-                                <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="100px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true" rowactionsposition="0"></wm-grid-column>
-                                <wm-grid-column binding="codeNumber" caption="Code Number" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                <wm-grid-column binding="codeTitle" caption="Code Title" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                <wm-grid-column binding="activeYn" caption="Active" type="boolean" widget-type="checkbox" generator="assigned" edit-widget-type="checkbox" show="true" readonly="false">
-                                    <wm-checkbox scopedatavalue="row['activeYn']" disabled="{{colDef.readonly || !isGridEditMode}}" class="" data-ng-class=""></wm-checkbox>
-                                </wm-grid-column>
-                                <wm-grid-action key="addNewRow" display-name="New Code" show="true" class="btn-primary" iconclass="wi wi-plus" title="New Code" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
-                                <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="editRow();updaterowAction($event)" disabled="false"></wm-grid-row-action>
-                                <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
-                            </wm-grid>
-                            <wm-liveform novalidate="false" errormessage="" title="Code Details" formlayout="dialog" iconclass="wi wi-playlist-add" dataset="bind:Variables.lvCodeListData.dataSet" captionalign="left" captionposition="top" name="liveformCodeList">
-                                <wm-layoutgrid columns="1" name="layoutgrid2">
-                                    <wm-gridrow name="gridrow8">
-                                        <wm-gridcolumn columnwidth="12" name="gridcolumn8">
-                                            <wm-form-field name="codeSets" displayname="Code Set" show="true" primary-key="false" generator="assigned" key="codeSets" type="list" is-related="true" readonly="false" required="false" widget="select" dataset="bind:Variables.lvCurrentCodeSetObj.dataSet"
-                                            datafield="All Fields" displayfield="codeSetTitle" defaultvalue="bind:Variables.lvCurrentCodeSetObj.firstRecord" placeholder="Select value" disabled="true"></wm-form-field>
-                                        </wm-gridcolumn>
-                                    </wm-gridrow>
-                                    <wm-gridrow name="gridrow4">
-                                        <wm-gridcolumn columnwidth="12" name="gridcolumn4">
-                                            <wm-form-field name="codeNumber" displayname="Code Number" show="true" primary-key="false" generator="assigned" key="codeNumber" type="string" readonly="false" required="true" widget="text" maxchars="255" inputtype="text"
-                                            placeholder="Enter value"></wm-form-field>
-                                        </wm-gridcolumn>
-                                    </wm-gridrow>
-                                    <wm-gridrow name="gridrow5">
-                                        <wm-gridcolumn columnwidth="12" name="gridcolumn5">
-                                            <wm-form-field name="codeTitle" displayname="Code Title" show="true" primary-key="false" generator="assigned" key="codeTitle" type="string" readonly="false" required="true" widget="text" maxchars="255" inputtype="text"
-                                            placeholder="Enter value"></wm-form-field>
-                                        </wm-gridcolumn>
-                                    </wm-gridrow>
-                                    <wm-gridrow name="gridrow6">
-                                        <wm-gridcolumn columnwidth="12" name="gridcolumn6">
-                                            <wm-form-field name="code" displayname="Code" show="true" primary-key="false" generator="assigned" key="code" type="text" readonly="false" required="true" widget="richtext" maxchars="5000" placeholder="Enter value"></wm-form-field>
-                                        </wm-gridcolumn>
-                                    </wm-gridrow>
-                                    <wm-gridrow name="gridrow7">
-                                        <wm-gridcolumn columnwidth="12" name="gridcolumn7">
-                                            <wm-form-field name="activeYn" displayname="Active" show="true" primary-key="false" generator="assigned" key="activeYn" type="boolean" readonly="false" required="false" widget="checkbox" defaultvalue="true" placeholder=""></wm-form-field>
-                                        </wm-gridcolumn>
-                                    </wm-gridrow>
-                                </wm-layoutgrid>
-                                <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="true" required="true" step="0" widget="number"></wm-form-field>
-                                <wm-form-field name="codeId" displayname="Code Id" show="false" primary-key="true" generator="identity" key="codeId" type="integer" readonly="true" required="true" step="0" widget="number" inputtype="number"
-                                placeholder="Enter value"></wm-form-field>
-                                <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-primary" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
-                                <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button" update-mode="true"></wm-form-action>
-                            </wm-liveform>
-                        </wm-livegrid>
+                        <wm-panel iconclass="wi wi-format-list-numbered" autoclose="outsideClick" title="bind:Variables.lvCurrentCodeSetObj.dataSet.data[$i].codeSetTitle" name="panel1" class="panel-primary">
+                            <wm-layoutgrid name="layoutgrid3">
+                                <wm-gridrow name="gridrow10">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn10">
+                                        <wm-label padding="unset 0.5em" name="label2" caption="bind:'Displayed below is a list of all individual codes contained within the '+Variables.lvCurrentCodeSetObj.dataSet.data[$i].codeSetTitle+' code set.'"></wm-label>
+                                        <wm-label padding="unset 0.5em" name="label3" caption="These codes can be cited as violations on inspections in your municipality by selecting &quot;Enable Violations&quot; on the &quot;Edit Inspection&quot; page for an inspection design, then attaching the code set to the inspection on the &quot;Violations&quot; tab."></wm-label>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                                <wm-gridrow name="gridrow11">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn12">
+                                        <wm-livegrid formlayout="dialog" name="livegridCodeList">
+                                            <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.lvCodeListData.dataSet" navigation="Classic" name="gridCodeList" filtermode="multicolumn" exportformat="EXCEL" showrecordcount="true">
+                                                <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="100px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true" rowactionsposition="0"></wm-grid-column>
+                                                <wm-grid-column binding="codeNumber" caption="Code Number" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                                <wm-grid-column binding="codeTitle" caption="Code Title" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                                <wm-grid-column binding="activeYn" caption="Active" type="boolean" widget-type="checkbox" generator="assigned" edit-widget-type="checkbox" show="true" readonly="false">
+                                                    <wm-checkbox scopedatavalue="row['activeYn']" disabled="{{colDef.readonly || !isGridEditMode}}" class="" data-ng-class=""></wm-checkbox>
+                                                </wm-grid-column>
+                                                <wm-grid-action key="addNewRow" display-name="New Code" show="true" class="btn-primary" iconclass="wi wi-plus" title="New Code" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
+                                                <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="editRow();updaterowAction($event)" disabled="false"></wm-grid-row-action>
+                                                <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
+                                            </wm-grid>
+                                            <wm-liveform novalidate="false" errormessage="" title="Code Details" formlayout="dialog" iconclass="wi wi-playlist-add" dataset="bind:Variables.lvCodeListData.dataSet" captionalign="left" captionposition="top"
+                                            name="liveformCodeList">
+                                                <wm-layoutgrid columns="1" name="layoutgrid2">
+                                                    <wm-gridrow name="gridrow8">
+                                                        <wm-gridcolumn columnwidth="12" name="gridcolumn8">
+                                                            <wm-form-field name="codeSets" displayname="Code Set" show="true" primary-key="false" generator="assigned" key="codeSets" type="list" is-related="true" readonly="false" required="false" widget="select"
+                                                            dataset="bind:Variables.lvCurrentCodeSetObj.dataSet" datafield="All Fields" displayfield="codeSetTitle" defaultvalue="bind:Variables.lvCurrentCodeSetObj.firstRecord" placeholder="Select value"
+                                                            disabled="true"></wm-form-field>
+                                                        </wm-gridcolumn>
+                                                    </wm-gridrow>
+                                                    <wm-gridrow name="gridrow4">
+                                                        <wm-gridcolumn columnwidth="12" name="gridcolumn4">
+                                                            <wm-form-field name="codeNumber" displayname="Code Number" show="true" primary-key="false" generator="assigned" key="codeNumber" type="string" readonly="false" required="true" widget="text" maxchars="255"
+                                                            inputtype="text" placeholder="Enter value"></wm-form-field>
+                                                        </wm-gridcolumn>
+                                                    </wm-gridrow>
+                                                    <wm-gridrow name="gridrow5">
+                                                        <wm-gridcolumn columnwidth="12" name="gridcolumn5">
+                                                            <wm-form-field name="codeTitle" displayname="Code Title" show="true" primary-key="false" generator="assigned" key="codeTitle" type="string" readonly="false" required="true" widget="text" maxchars="255"
+                                                            inputtype="text" placeholder="Enter value"></wm-form-field>
+                                                        </wm-gridcolumn>
+                                                    </wm-gridrow>
+                                                    <wm-gridrow name="gridrow6">
+                                                        <wm-gridcolumn columnwidth="12" name="gridcolumn6">
+                                                            <wm-form-field name="code" displayname="Code" show="true" primary-key="false" generator="assigned" key="code" type="text" readonly="false" required="true" widget="richtext" maxchars="5000" placeholder="Enter value"></wm-form-field>
+                                                        </wm-gridcolumn>
+                                                    </wm-gridrow>
+                                                    <wm-gridrow name="gridrow7">
+                                                        <wm-gridcolumn columnwidth="12" name="gridcolumn7">
+                                                            <wm-form-field name="activeYn" displayname="Active" show="true" primary-key="false" generator="assigned" key="activeYn" type="boolean" readonly="false" required="false" widget="checkbox" defaultvalue="true"
+                                                            placeholder=""></wm-form-field>
+                                                        </wm-gridcolumn>
+                                                    </wm-gridrow>
+                                                </wm-layoutgrid>
+                                                <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="true" required="true" step="0" widget="number"></wm-form-field>
+                                                <wm-form-field name="codeId" displayname="Code Id" show="false" primary-key="true" generator="identity" key="codeId" type="integer" readonly="true" required="true" step="0" widget="number"
+                                                inputtype="number" placeholder="Enter value"></wm-form-field>
+                                                <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-primary" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
+                                                <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button"
+                                                update-mode="true"></wm-form-action>
+                                            </wm-liveform>
+                                        </wm-livegrid>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                            </wm-layoutgrid>
+                        </wm-panel>
                     </wm-gridcolumn>
                 </wm-gridrow>
             </wm-layoutgrid>
