--- a/src/main/webapp/pages/MunicipalityCodeSets/MunicipalityCodeSets.html
+++ b/src/main/webapp/pages/MunicipalityCodeSets/MunicipalityCodeSets.html
@@ -12,7 +12,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow7">
                     <wm-gridcolumn columnwidth="6" name="gridcolumn17_1" padding="unset unset 1em unset">
-                        <wm-label name="label5" caption="Municipality Code Sets" fontweight="bold" class="h4"></wm-label>
+                        <wm-label name="label5" caption="Municipality Code Sets" fontweight="bold" class="h4" padding="unset 0.5em"></wm-label>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" name="gridcolumn19_1" padding="unset unset 1em unset">
                         <wm-composite name="composite1" show="bind:Variables.EmployeesMunicipalities.dataSet.content.length > 1">
@@ -25,7 +25,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow5_1">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn6">
-                        <wm-label padding="unset 0.5em" name="label3" caption="Code Sets are assigned individually to inspection designs where the &quot;Track Violations&quot; setting is enabled, and allow inspectors to cite violations of specific codes on an inspection."></wm-label>
+                        <wm-label padding="unset 0.5em" name="label3" caption="Code Sets are assigned to individual inspection designs that have the &quot;Enable Violations&quot; setting selected, and allow inspectors to cite violations of specific codes on an inspection."></wm-label>
                         <wm-label padding="unset 0.5em" name="label4" caption="The following code sets can be cited as violations within your municipality only."></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
